--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
           alt="A 3D cube with differente colors, reflexive and using a blue background."
         />
         <img class="icon" src="./images/icon-view.svg" alt="icon-view" />
-        <div class="background"></div>
       </div>
       <div class="text">
         <h3 class="title">Equilibrium #3429</h3>
@@ -71,7 +70,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">Welliaquim B.</a>.
     </div>
   </body>
 </html>
